--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["codebases", "Fontawesome", "Leetcode", "lostmokokos", "Mokokos", "speedynexus", "uselections"]
+  "cSpell.words": ["codebases", "Fontawesome", "Leetcode"]
 }
